# NuMaker-mbed-ce-Azure-IoT-CSDK-OTA-example

./: CMakeLists.txt  README.md  cmake-variants.yaml  mbed-client-for-azure.lib  mbed_app.json  mbed_app.json5
configs/: aduc_user_config.h
src/: main.cpp  mem_stats.cpp
